--- a/css/haeundae.css
+++ b/css/haeundae.css
@@ -88,12 +88,6 @@ nav {
 .nav {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.nav li {
-  width: 100%;
-  height: 50px;
 }
 .nav a {
   color: #fff;
@@ -116,12 +110,11 @@ nav {
   width: 100%;
   line-height: 50px;
   background-color: #fff;
-  color: indigo;
+  color: #333;
   transition: all 0.2s ease;
 }
 .depth2 a:hover {
-  background-color: indigo;
-  color: #fff;
+  color: indigo;
 }
 
 /* slide */
