--- a/css/joy.css
+++ b/css/joy.css
@@ -21,7 +21,7 @@ img {
 }
 button {
   all: unset;
-  display: block;
+  display: inline-block;
   cursor: pointer;
 }
 /* modal */
@@ -192,28 +192,29 @@ nav {
     padding: 16px;
 }
 .banner img{
-    width: 20%;
+    width: 250px;
+}
+.banner-dscr{
+width: calc(100% - 250px);
+height: 100%;
+display: flex;
+justify-content: space-between;
 }
 .banner-txt{
-    width: 70%;
     padding: 0 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 16px;
 }
-.bannerBtn{
-    width: 10%;
+#banner{
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: #ddd; */
-}
-#banner{
     font-size: 24px;
     background-color: goldenrod;
-    padding:45px 30px;
-    border-radius: 50%;
+    padding:18px;
+    border-radius: 5px;
     color: #fff;
     font-weight: 500;
 }
