--- a/css/bank.css
+++ b/css/bank.css
@@ -195,7 +195,7 @@ nav {
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  justify-content: space-around;
   display: none;
 }
 .notice-list a {
