--- a/css/buyeo.css
+++ b/css/buyeo.css
@@ -188,7 +188,7 @@ section > ul {
 }
 .notice-list{
     flex-direction: column;
-    gap: 12px;
+    justify-content: space-around;
 }
 .notice-list a{
     display: flex;
