--- a/css/kimchi.css
+++ b/css/kimchi.css
@@ -145,7 +145,7 @@ nav {
 }
 .banner-img {
   width: 120px;
-  height: 120px;
+  height: 100%;
 }
 .banner-img img {
   width: 100%;
@@ -248,6 +248,7 @@ nav {
   color: brown;
   font-weight: 500;
   font-size: 14px;
+  margin-top: 8px;
 }
 
 /* slide */
