--- a/css/namdo.css
+++ b/css/namdo.css
@@ -185,7 +185,7 @@ section > a {
   height: calc(100% - 40px);
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  justify-content: space-around;
   padding: 12px;
   /* background-color: #ddd; */
 }
