--- a/css/tech-collage.css
+++ b/css/tech-collage.css
@@ -135,16 +135,11 @@ nav {
   display: block;
 }
 .slide-txt {
-  width: 60%;
-  height: 100%;
   position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% ,-50%);
+  background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
   padding: 24px;
