--- a/css/tour.css
+++ b/css/tour.css
@@ -199,6 +199,7 @@ nav {
 .no,
 .ga {
   width: 100%;
+  height: 100%;
 }
 .no > a,
 .ga > a {
@@ -210,10 +211,13 @@ nav {
   font-weight: 500;
   color: #fff;
 }
-.no > li {
-  width: 100%;
-  padding: 10px 10px 0;
+.no{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* background-color: #ddd; */
 }
+
 .no > li > a {
   width: 100%;
   display: flex;
